WP化ニュースとキャスト

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -9,13 +9,13 @@
         position: relative;
         padding-top: 140 / 250 * 100%;
         overflow: hidden;
-    }
 
-    &__img {
-        position: absolute;
-        top: 50%;
-        width: 100%;
-        transform: translateY(-50%);
+        img {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            transform: translateY(-50%);
+        }
     }
 
     &__body {
