--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,13 @@ a:focus {
 	transition: 0.3s;
 }
 
+img {
+	height: auto;
+	max-width: 100%;
+	vertical-align: bottom;
+	width: 100%;
+}
+
 .breadcrumbs {
 	color: #333333;
 	font-size: 12px;
@@ -239,7 +246,7 @@ a:focus {
 	position: relative;
 }
 
-.card__img {
+.card__img-wrapper img {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
