--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -19,3 +19,10 @@ a {
         transition: 0.3s;
     }
 }
+
+img {
+    vertical-align: bottom;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
