--- a/src/sass/_wp-pagenavi.scss
+++ b/src/sass/_wp-pagenavi.scss
@@ -14,6 +14,7 @@
         font-size: $fz_min;
         line-height: 27px;
         text-align: center;
+        padding: 0;
     }
 
     .current {
@@ -24,6 +25,8 @@
         background-color: #1A1A1A;
         color: #F4D102;
         line-height: 27px;
+        padding: 0;
+        border: none;
     }
 
     .page {
@@ -34,5 +37,7 @@
         background-color: #1A1A1A;
         color: #F4D102;
         line-height: 27px;
+        padding: 0;
+        border: none;
     }
 }
