ストーリー完成

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -792,6 +792,13 @@ img {
 	margin-top: 30px;
 }
 
+.story-detail__sub-title {
+	color: #ffffff;
+	font-size: 22px;
+	padding-top: 54px;
+	text-align: center;
+}
+
 .story-detail__right-content {
 	display: flex;
 	justify-content: flex-end;
@@ -813,7 +820,7 @@ img {
 	font-size: 12px;
 	line-height: 1.83333;
 	padding-bottom: 60px;
-	padding-top: 60px;
+	padding-top: 24px;
 	width: 47%;
 }
 
