--- a/src/sass/_inquiry.scss
+++ b/src/sass/_inquiry.scss
@@ -51,9 +51,13 @@
             }
         }
 
+        span {
+            width: (520px / 750px) * 100%;
+        }
+
         input[type="text"] {
             display: block;
-            width: (520px / 750px) * 100%;
+            width: 100%;
             height: 45px;
             font-size: $fz_normal;
             color: $clr_normal;
@@ -71,7 +75,7 @@
 
         textarea {
             display: block;
-            width: (520px / 750px) * 100%;
+            width: 100%;
             height: 165px;
             font-size: $fz_normal;
             color: $clr_normal;
